--- a/_includes/header.html
+++ b/_includes/header.html
@@ -14,6 +14,6 @@
 
 <link rel="shortcut icon" href="{{ site.favicon }}" />
 
-<link rel="stylesheet" type="text/css" href="/assets/css/style.css">
+<link rel="stylesheet" type="text/css" href="/blog/assets/css/style.css">
 
-<link href="/pages/rss.xml" rel="alternate" title="{{site.title}}" type="application/atom+xml">
+<link href="/blog/pages/rss.xml" rel="alternate" title="{{site.title}}" type="application/atom+xml">
