--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -4,7 +4,7 @@
 
     <ul id="tags__ul">
       <li id="pl__all" class="tags__li tags-btn active">全部</li>
-      {% for category in site.categories %} 
+      {% for category in site.categories %}
         <li id="{{ category[0] }}" class="tags__li tags-btn">{{ category[0] }}</li>
       {% endfor %}
     </ul>
@@ -24,7 +24,7 @@
 
     <nav id="pl__container">
     {% for post in site.posts %}
-      <a class="{{ post.categories }} pl__all" href="{{ post.url }}"><span class="pl__circle"></span><span class="pl__title">{{ post.title }}</span><span class="pl__date">{{ post.date | date: "%b %Y" }}</span></a>
+      <a class="{{ post.categories }} pl__all" href="blog/{{ post.url }}"><span class="pl__circle"></span><span class="pl__title">{{ post.title }}</span><span class="pl__date">{{ post.date | date: "%b %Y" }}</span></a>
     {% endfor %}
     </nav>
   </div> <!-- end #posts-list -->
