--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -32,13 +32,13 @@
     <nav id="toc">
       {% if site.filter == 'category' %}
         {% for post in site.posts %}
-          <a class="toc-link" data-tags="{{ post.categories | join: ' ' }}" href="{{ post.url }}">
+          <a class="toc-link" data-tags="{{ post.categories | join: ' ' }}" href="{{ post.url | prepend: site.baseurl }}">
             {{ post.title }}
           </a>
         {% endfor %}
       {% elsif site.filter == 'tag' %}
         {% for post in site.posts %}
-          <a class="toc-link" data-tags="{{ post.tags | join: ' ' }}" href="{{ post.url }}">
+          <a class="toc-link" data-tags="{{ post.tags | join: ' ' }}" href="{{ post.url | prepend: site.baseurl }}">
             {{ post.title }}
           </a>
         {% endfor %}
