--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -35,7 +35,7 @@ layout: default
   this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
   };
   */
-  (function() { // DON'T EDIT BELOW THIS LINE
+  (function() {
   var d = document, s = d.createElement('script');
   s.src = '//wenbaoquan-blog.disqus.com/embed.js';
   s.setAttribute('data-timestamp', +new Date());
