--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,9 +3,11 @@ layout: default
 ---
 <article class="post container">
   <div class="post-meta">
-    <span class="post-meta-span date">{{ page.date | date:"%Y %B %d" }}</span>
+    {% if page.date > 0 %}
+      <span class="post-meta-span date">{{ page.date | date:"%Y %B %d" }}</span>
+    {% endif %}
     {% if page.tags.size > 0 %}
-    <span class="post-meta-span tag">{{ page.tags | join: ', ' }}</span>
+      <span class="post-meta-span tag">{{ page.tags | join: ', ' }}</span>
     {% endif %}
   </div>
 
