--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -65,61 +65,70 @@
 		</div>
 	</nav>
 	<div id="content" class="container-fluid content">
-		<div class="row">
-			<div class="col-xs-5 col-sm-4 col-md-3 col-lg-2" id="menu_list">
-				<ul class="category-list">
-					<li class="">
-						<a href="?category=all">
+		<div class="row full-height">
+			<div id="menu-box" class="col-sm-9 col-md-7 col-lg-5 full-height">
+				<div class="row full-height">
+					<div class="col-xs-5" id="menu_list">
+						<ul class="category-list">
+							<li class="">
+								<a href="?category=all">
               所有文章
               <span class="badge">{{site.posts | size}}</span>
             </a>
-					</li>
+							</li>
 
-					{% assign category_group = site.posts | group_by:"category" %} {% for category in category_group %}
-					<li class="">
-						<a href="?category={{category.name}}">
+							{% assign category_group = site.posts | group_by:"category" %} {% for category in category_group %}
+							<li class="">
+								<a href="?category={{category.name}}">
                 {{ category.name }}
                 <span class="badge">{{category.size}}</span>
               </a>
-					</li>
-					{% endfor %}
-				</ul>
+							</li>
+							{% endfor %}
+						</ul>
 
-				<div class="tag-list">
-					{% for tag in site.tags %}
-					<a class="label label-primary" style="margin-right: 5px" href="?tag={{tag[0]}}">
+						<div class="tag-list">
+							{% for tag in site.tags %}
+							<a class="label label-primary" style="margin-right: 5px" href="?tag={{tag[0]}}">
             {{ tag[0] }}
             ({{ site.posts | where:"tags", tag[0] | size }})
           </a> {% endfor %}
+						</div>
+					</div>
+					<div class="col-xs-7 col-xs-offset-5" id="post_list">
+						<ul>
+							{% for post in site.posts %}
+							<li data-category="{{post.category}}" data-tags="{{ post.tags | join: ', ' }}">
+								<a href="{{ post.url }}">
+									<span>{{ post.title }} </span>
+									<span>{{ post.date | date: "%b %Y" }}</span>
+								</a>
+							</li>
+							{% endfor %}
+						</ul>
+
+					</div>
 				</div>
-			</div>
-			<div class="col-xs-7 col-sm-5 col-md-4 col-lg-3 col-xs-offset-5 col-sm-offset-4 col-md-offset-3 col-lg-offset-2" id="post_list">
-				<ul>
-					{% for post in site.posts %}
-					<li data-category="{{post.category}}" data-tags="{{ post.tags | join: ', ' }}">
-						<a href="{{ post.url }}">
-							<span>{{ post.title }} </span>
-							<span>{{ post.date | date: "%b %Y" }}</span>
-						</a>
-					</li>
-					{% endfor %}
-				</ul>
-			</div>
-			<div class="col-sm-12 col-md-10 col-lg-7 col-md-offset-2 col-lg-offset-5" id="post_content">
-				<div>
-					<article>
-						<h1 data-identifier="{{ page.date | date: " %Y%m%d " }}">{{ page.title }}</h1>
-						{{ content }}
-					</article>
+
+				<div id="toggle-list" class="hidden-lg" data-show="true">
+					< </div>
+				</div>
+
+				<div class="col-lg-7 col-lg-offset-5" id="post_content">
+					<div>
+						<article>
+							<h1 data-identifier="{{ page.date | date: " %Y%m%d " }}">{{ page.title }}</h1>
+							{{ content }}
+						</article>
+					</div>
 				</div>
 			</div>
 		</div>
-	</div>
-	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-	<script src="/src/jquery/jquery.min.js"></script>
-	<!-- Include all compiled plugins (below), or include individual files as needed -->
-	<script src="/src/bootstrap/js/bootstrap.min.js"></script>
-	<script src="/src/js/main.js"></script>
+		<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+		<script src="/src/jquery/jquery.min.js"></script>
+		<!-- Include all compiled plugins (below), or include individual files as needed -->
+		<script src="/src/bootstrap/js/bootstrap.min.js"></script>
+		<script src="/src/js/main.js"></script>
 </body>
 
 </html>
